# zeta

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  EXAMPLE.md  LICENSE  MANIFEST.in  README.md  conftest.py  dispatch.md  extension.md  notes-agent-ergonomics.md  notes.md  pyproject.toml  refactor.md  simplification.md  step.md  test.md
.github/workflows/: ci.yml  release.yml
commas/: pyproject.toml
commas/src/commas/: __init__.py  agent_io.py  history.py  install.py  sessions.py  state.py  turn.py
commas/src/commas/bindings/: commas.zsh
commas/src/commas/cli/: _base.py  install.py  log.py  session.py
commas/src/commas/display/: summarize.py
commas/src/commas/tools/: __init__.py  query_log.py
commas/tests/: test_display.py  test_history.py  test_security_state.py  test_shell_bindings.py  test_workflows.py
docs/: cli.md  concepts.md  demo.tape  demo.zsh  make-tuis-obsolete.md  security-lattice.md  semantic-operators-roadmap.md  trust-model.md  ux-directions.md  zeta-context-budget.md  zeta-prompt-trace.md  zeta.html  zsh-native-zeta-loop.md
docs/demos/: README.md  fake_model_server.py  fake_pi.py  fake_uv.py  fake_zeta.py  setup.zsh  trace-replay.md
docs/demos/tapes/: 06-act-step.tape  07-failure-recovery.tape  10-lazygit-review.tape
emacs/: README.md  zeta-block.el
emacs/demos/: 01-inline-pairing-queue.cast  02-region-scoped-edit.cast  03-stale-edit-protection.cast  README.md
shell/bash/: install.bash  sigil.bash
shell/zsh/: install.zsh  sigil.zsh
sigil/: __init__.py  ansi.py  cli.py  commands.py  pi_stream.py  question.py  qwen.py  server.py  state.py
src/agents/: __init__.py  events.py  loader.py  manifest.py  prompts.py  resources.py  returns.py  runtime.py  spec.py
src/commas/: __init__.py  _version.py  agent_io.py  bundle.py  failure.py  handoff.py  history.py  install.py  protocols.py  sessions.py  state.py  status.py  turn.py
src/commas/bindings/: commas.zsh
src/commas/cli/: __init__.py  _base.py  _shared.py  events.py  install.py  log.py  model.py  run.py  session.py  status.py  step.py  trace.py
src/commas/display/: render.py  state.py  summarize.py  tty.py
src/commas/tools/: __init__.py  bash.py  edit.py  grep.py  ls.py  query_log.py  read.py  web.py  write.py
src/commas/trace/: __init__.py  diff.py  query.py  render.py  replay.py  tools.py
src/commas/workflows/: ask.py  do.py  propose.py  step.py
src/connectors/: __init__.py  slack.py
src/sigil/: __init__.py  acts.py  agent_io.py  ansi.py  answers.py  bundle.py  cli.py  commands.py  display.py  events.py  failure.py  goals.py  handoff.py  history.py  install.py  ledger.py  model.py  operators.py  patches.py  pi_stream.py  policy.py  protocols.py  question.py  qwen.py  security.py  server.py  session.py  sessions.py  staged_command.py  state.py  status.py  stream.py  tty.py  turn.py  zeta_runner.py
src/sigil/bindings/: sigil.zsh
src/sigil/cli/: __init__.py  _base.py  _shared.py  act.py  ask.py  command.py  display.py  events.py  handoff.py  install.py  log.py  model.py  operators.py  records.py  run.py  session.py  status.py  step.py  trace.py  transcript.py  zeta.py  zeta_step.py
src/sigil/display/: __init__.py  render.py  state.py  summarize.py  tty.py
src/sigil/pi_extensions/: sigil_shell.ts
src/sigil/routes/: _turn.py  act.py  ask.py  operators.py  zeta_step.py
src/sigil/tools/: __init__.py  bash.py  edit.py  grep.py  ls.py  query_log.py  read.py  web.py  write.py
src/sigil/trace/: diff.py  query.py  render.py  replay.py  tools.py
src/sigil/workflows/: ask.py  do.py  propose.py  step.py
src/sigil/zeta/: __init__.py  agent.py  cli.py  context.py  display.py  model.py  models.py  prompt.py  runner.py  runtime.py  server.py  skills.py  stream.py  timeline.py  trace.py
src/zeta/: agent.py  agents.py  cli.py  context.py  dispatch.py  events.py  execute.py  history.py  loop.py  process.py  rpc.py  runtime_events.py  session.py  skills.py  substrate.py  timeline.py  trace.py  turn.py
src/zeta/agents/: __init__.py  capabilities.py  events.py  loader.py  manifest.py  prompts.py  (+4 more)
src/zetad/: cli.py  scheduling.py  worker.py
test_support/: zeta_helpers.py
tests/: _patch.py  _zeta_helpers.py  conftest.py  test_display.py  test_history.py  test_install.py  test_ledger.py  test_operators.py  test_routes.py  test_security_state.py  test_shell_bindings.py  test_status.py  test_stream.py  test_workflows.py  test_zeta_agent.py  test_zeta_agents.py  test_zeta_codex_auth.py  test_zeta_event_projection.py  test_zeta_model.py  test_zeta_prompt.py  test_zeta_responses.py  test_zeta_runtime.py  test_zeta_stream.py  test_zeta_tools.py  test_zeta_trace.py
zeta/: pyproject.toml
zeta/src/connectors/: __init__.py  filesystem.py  slack.py
zeta/src/zeta/agents/: manifest.py  resources.py  scaffold.py  spec.py
zeta/src/zeta/capabilities/: execution.py  host.py  paths.py  registry.py
zeta/src/zeta/context/: builder.py  components.py
zeta/src/zeta/models/: chat_completions.py  codex_auth.py  responses.py
zeta/src/zeta/records/: provenance.py
zeta/src/zeta/records/stores/: _object_memory.py  _object_sqlite.py  memory.py  sqlite.py
zeta/src/zeta/run/: config.py  context.py  outcomes.py  projection.py  runtime.py  streaming.py
zeta/src/zeta/substrate/: __init__.py  memory.py  objects.py  sqlite.py  store.py
zeta/src/zeta/tools/: __init__.py  bash.py  edit.py  grep.py  ls.py  read.py  web.py  write.py
zeta/src/zeta/trace/: __init__.py  diff.py  query.py  render.py  replay.py  summarize.py  tools.py
zeta/src/zetad/: agents.py  cli.py  cli_trace.py  connector_bridge.py  dispatch.py  projections.py  queue.py  retry.py  scheduling.py  store.py  worker.py
zeta/src/zetad/rpc/: routes.py  stdio.py
zeta/tests/: test_import_boundaries.py  test_zeta_agent.py  test_zeta_agents.py  test_zeta_base_dir.py  test_zeta_codex_auth.py  test_zeta_event_projection.py  test_zeta_filesystem_connector.py  test_zeta_model.py  test_zeta_prompt.py  test_zeta_responses.py  test_zeta_scaffold.py  test_zeta_tools.py  test_zeta_trace_cli.py
zsh/: sigil.zsh
(+136 files in other folders)
