[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "commas"
dynamic = ["version"]
description = "Verb-first LLM interaction for the shell, with optional punctuation shortcuts."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Rémi Louf" }
]
keywords = [
  "ai",
  "cli",
  "llm",
  "shell",
  "terminal",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: System :: Shells",
  "Topic :: Terminals",
]
dependencies = [
  "click>=8.1",
  "rich>=13.7",
  "zeta-os",
]

[project.urls]
Homepage = "https://github.com/rlouf/zeta"
Repository = "https://github.com/rlouf/zeta"
Issues = "https://github.com/rlouf/zeta/issues"

[project.scripts]
commas = "commas.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
commas = [
  "bindings/commas.zsh",
]

[tool.setuptools_scm]
fallback_version = "0.1.0"
local_scheme = "no-local-version"
root = ".."
version_file = "src/commas/_version.py"
